--- a/StudentsPane.html
+++ b/StudentsPane.html
@@ -48,7 +48,7 @@
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide" data-image-width="626" data-image-height="417">
-                <img class="u-back-image u-expanded" src="Prarabdha.jpeg">
+                <img class="u-back-image u-expanded" src="Akarsh.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-1">
                 <h3 class="u-gallery-heading"></h3>
@@ -57,7 +57,7 @@
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide" data-image-width="626" data-image-height="626">
-                <img class="u-back-image u-expanded" src="Isha.jpeg">
+                <img class="u-back-image u-expanded" src="Prarabdha.jpeg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-2">
                 <h3 class="u-gallery-heading"></h3>
@@ -66,7 +66,7 @@
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide" data-image-width="462" data-image-height="417">
-                <img class="u-back-image u-expanded" src="images/cxcc.jpg">
+                <img class="u-back-image u-expanded" src="Isha1.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-3">
                 <h3 class="u-gallery-heading"></h3>
@@ -75,7 +75,7 @@
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide" data-image-width="462" data-image-height="417">
-                <img class="u-back-image u-expanded" src="images/677.jpg">
+                <img class="u-back-image u-expanded" src="Anshi.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-4">
                 <h3 class="u-gallery-heading"></h3>
@@ -84,7 +84,7 @@
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide" data-image-width="462" data-image-height="417">
-                <img class="u-back-image u-expanded" src="images/vcv.jpg">
+                <img class="u-back-image u-expanded" src="Tabish.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-5">
                 <h3 class="u-gallery-heading"></h3>
@@ -93,7 +93,7 @@
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide" data-image-width="462" data-image-height="417">
-                <img class="u-back-image u-expanded" src="images/vcvc.jpg">             
+                <img class="u-back-image u-expanded" src="Anugya.jpg">             
               </div>
               <div class="u-over-slide u-shading u-over-slide-6">
                 <h3 class="u-gallery-heading"></h3>
